#333 style: 체크 스타일에 따른 코드 정리